# RulesTools

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  cli.py  install.sh  pyproject.toml
apps/cli/: Cargo.toml
apps/cli/src/: main.rs  publish.rs  scaffold.rs
apps/cli/src/commands/: generate.rs  hook.rs  issue.rs  mod.rs  project.rs  scan.rs
apps/cli/src/mcp/: mod.rs
apps/cli/src/mcp/rules/: handlers.rs  mod.rs  registry.rs
apps/cli/src/mcp/tools/: definitions.rs  generate.rs  issue.rs  mod.rs  project.rs  publish.rs  scan.rs
apps/cli/src/scaffold/: features.rs  kinds.rs  mod.rs  proj_files.rs  templates.rs  types.rs  update.rs  upgrade.rs
apps/mcp-rules/: Cargo.toml
apps/mcp-rules/src/: main.rs  registry.rs  rules.rs
apps/mcp-tools/: Cargo.toml
apps/mcp-tools/src/: main.rs  protocol.rs  tools.rs
common/: config.py  debt.py  file_size.py  import_direction.py  installer.py  issue.py  nesting.py  precommit.py  runner.py  secrets.py  selfcheck.py  standalone.py  stray_files.py  topology.py  writer.py
crates/documenter/: Cargo.toml
crates/documenter/src/: generator.rs  lib.rs  manifest.rs  parser.rs
crates/documenter/src/docgen/: inserter.rs  mod.rs
crates/scanner/: Cargo.toml
crates/scanner/src/: config.rs  context.rs  issue.rs  lib.rs  output.rs  project.rs  severity.rs  walker.rs
crates/scanner/src/checks/: borrowed_containers.rs  clone_spam.rs  coupling.rs  cpp_checks.rs  csharp_checks.rs  css_checks.rs  debt.rs  doc_required.rs  errors.rs  file_size.rs  hardcoded_durations.rs  hardcoded_paths.rs  hardcoded_urls.rs  js_modules.rs  js_safety.rs  kotlin_checks.rs  layer_violation.rs  magic_numbers.rs  mod.rs  modules.rs  mother_child.rs  naming.rs  nesting.rs  path_deps.rs  placement.rs  python_checks.rs  secrets.rs  shared_discovery.rs  shared_guard.rs  sibling_import.rs  slint_checks.rs  slint_gateway.rs  slint_mother_child.rs  string_states.rs  threading.rs  topology_naming.rs  topology_suffix.rs  unsafe_comment.rs
csharp/: scanner.py
css/: scanner.py
js/: scanner.py
kotlin/: scanner.py
man/: MANIFEST.json  MANIFEST.md  apps_cli_src_commands_generate.rs.json  apps_cli_src_commands_generate.rs.md  apps_cli_src_commands_hook.rs.json  apps_cli_src_commands_hook.rs.md  apps_cli_src_commands_issue.rs.json  apps_cli_src_commands_issue.rs.md  apps_cli_src_commands_mod.rs.json  apps_cli_src_commands_mod.rs.md  apps_cli_src_commands_project.rs.json  apps_cli_src_commands_project.rs.md  apps_cli_src_commands_scan.rs.json  apps_cli_src_commands_scan.rs.md  apps_cli_src_main.rs.json  apps_cli_src_main.rs.md  apps_cli_src_mcp_mod.rs.json  apps_cli_src_mcp_mod.rs.md  apps_cli_src_mcp_rules_handlers.rs.json  apps_cli_src_mcp_rules_handlers.rs.md  apps_cli_src_mcp_rules_mod.rs.json  apps_cli_src_mcp_rules_mod.rs.md  apps_cli_src_mcp_rules_registry.rs.json  apps_cli_src_mcp_rules_registry.rs.md  apps_cli_src_mcp_tools_definitions.rs.json  apps_cli_src_mcp_tools_definitions.rs.md  apps_cli_src_mcp_tools_generate.rs.json  apps_cli_src_mcp_tools_generate.rs.md  apps_cli_src_mcp_tools_issue.rs.json  apps_cli_src_mcp_tools_issue.rs.md  apps_cli_src_mcp_tools_mod.rs.json  apps_cli_src_mcp_tools_mod.rs.md  apps_cli_src_mcp_tools_project.rs.json  apps_cli_src_mcp_tools_project.rs.md  apps_cli_src_mcp_tools_publish.rs.json  apps_cli_src_mcp_tools_publish.rs.md  apps_cli_src_mcp_tools_scan.rs.json  apps_cli_src_mcp_tools_scan.rs.md  apps_cli_src_publish.rs.json  apps_cli_src_publish.rs.md  (+116 more)
proj/: INSTALL  ISSUES  PROJECT  TODO  rulestools.toml
python/: scanner.py
src/: lib.rs  (+3 more)
(+65 files in other folders)
