[package]
name = "rulestools"
version = "0.3.0"
edition = "2021"
description = "Unified static code scanner — enforces Rules repo conventions across all languages"
repository = "https://github.com/lpmwfx/RulesTools"

[lib]
name = "rulestools"
path = "src/lib.rs"

[[bin]]
name = "rulestools"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
regex = "1"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
walkdir = "2"
glob = "0.3"
