[workspace]
members = [
    "crates/scanner",
    "crates/documenter",
    "apps/cli",
    "apps/mcp-rules",
    "apps/mcp-tools",
]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2021"
repository = "https://github.com/lpmwfx/RulesTools"

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
regex = "1"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
glob = "0.3"
