[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rulestools"
version = "0.2.0"
description = "Code scanners for Rules coding standards"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "watchdog>=4.0",
]

[project.scripts]
rulestools = "cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["common*", "rust*", "js*", "slint*", "css*", "python*", "kotlin*", "csharp*"]
