[package]
name = "rulestools-documenter"
description = "Auto-documentation generator for Rust projects"
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
walkdir = { workspace = true }
