[package]
name = "rulestools-scanner"
description = "Core scanning engine — checks, config, file walking, issue reporting"
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
regex = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
walkdir = { workspace = true }
glob = { workspace = true }
